# realtime-sentiment-api

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.json
src/: config.py
src/api/: __init__.py  cache.py  main.py  schemas.py
src/model/: __init__.py  sentiment_model.py
src/monitoring/: __init__.py  metrics.py
tests/: load_test.py
tests/integration/: test_api.py
tests/unit/: test_sentiment_model.py
